Where to get Git

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -27,8 +27,8 @@ class: center, middle
 
 # Agenda
 
-1. What is Version Control
-2. Why is Git Special
+1. What is Version Control?
+2. Why is Git Special?
 3. Get Git
 4. Before Gitting started (env setup)
 5. Walkthrough: Creating a repository
@@ -37,7 +37,41 @@ class: center, middle
 
 ---
 
-# Introduction
+class: center, middle
+
+# What is Version Control?
+
+---
+
+class: center, middle
+
+# Why is Git Special?
+
+---
+
+# Get Git
+
+Windows
+* Windows Git Installer (https://git-scm.com/download/win)
+* **Git for Windows package**
+```url
+https://git-for-windows.github.io/
+```
+
+Mac
+* Xcode provided
+* Mac Git installer (https://git-scm.com/download/mac)
+* **Homebrew**
+* MacPorts
+```bash
+$ brew install git
+```
+
+Linux
+* Use package manager of your choice
+```bash
+sudo apt-get install git
+```
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
