--- a/slides/part1.html
+++ b/slides/part1.html
@@ -73,6 +73,20 @@ Linux
 sudo apt-get install git
 ```
 
+---
+
+# Before Starting - Environment Setup
+
+```bash
+# Username/email
+$ git config --global user.name "John Doe"
+$ git config --global user.email johndoe@example.com
+
+# Line endings (pick the one for platform)
+$ git config --global core.autocrlf input    # OS X or Linux
+$ git config --global core.autocrlf true     # Windows
+```
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
