Finish part1 slides

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -87,6 +87,32 @@ $ git config --global core.autocrlf input    # OS X or Linux
 $ git config --global core.autocrlf true     # Windows
 ```
 
+---
+
+class: center, middle
+
+# Walkthrough: Creating a repository
+
+---
+
+class: center, middle
+
+# Walkthrough: Sharing code with others
+
+---
+
+class: center, middle
+
+# ...
+
+---
+
+class: center, middle
+
+# Thank You
+
+
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
