Add additional resources links

--- a/slides/part1.html
+++ b/slides/part1.html
@@ -104,6 +104,15 @@ class: center, middle
 class: center, middle
 
 # ...
+---
+
+# Additional resources
+
+## ProGit
+https://git-scm.com/book/en/v2
+
+## Atlassian has very good tutorial
+https://www.atlassian.com/git/
 
 ---
 
