Slides for GitHub account and walkthrough

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -36,8 +36,8 @@ name: agenda
 4. Major Concepts (Review)
 5. Local Workflow (Review) 
 6. Local Repo Commands (Review)
-
-6. Create GitHub account
+7. Create GitHub Account
+8. Walkthrough: Working with Remotes
 
 7. Walkthrough
     create a repo at git hub
@@ -175,6 +175,18 @@ git merge
 # List of file git should not manage
 .gitignore
 ```
+
+---
+
+class: center, middle
+
+# Create GitHub Account
+
+---
+
+class: center, middle
+
+# Walkthrough: Working with Remotes
 
 ---
 
