clarify local repo commands

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -156,7 +156,7 @@ Assume you don't know what words mean
 #  Local Repo Commands (Review)
 
 ```bash
-# How to use a command
+# How to use a command?
 git help
 git help <command>
 
