Finish sorting outline of topics

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -38,46 +38,21 @@ name: agenda
 6. Local Repo Commands (Review)
 7. Create GitHub Account
 8. Walkthrough: Working with Remotes
+9. Git Pull
 
-7. Walkthrough
-    create a repo at git hub
-    follow github commands to upload repo
-        remote
-        push
-
-    show at GitHub
-    modify on GitHub -add readme
-        fetch
-fetching changes from a remote.  This is your local view of the database at the remote side
-
-git URL for project
-    have people get it
-Cloaning project from git hub
-pushing your changes to a remote
-
-
-* A remote is a link to get to a git database that is somewhere else
-0.  Tell git how where to find the other database and give it a name
-
-1. fetch
-2. push
-
-
-pull = fetch + merge
-
-There is an implicit branch because these are distributed systems.  Therefore the solution is a merge
-
-
-6. Workflows
+10. Workflows
     Centralized
     GitHub/Integration manager *
     Gradschool model
 
-6. Other ways to share repo
+11. GitHub Pull Requests
+
+12. Other ways to share repo
     Thumb drive / mounted filesystem
     another computer over ssh
     git daemon
-7. SSH Keys
+
+13. SSH Keys
 ssh keys
 
 ---
