Walkthrough and git pull slides

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -159,9 +159,51 @@ class: center, middle
 
 ---
 
-class: center, middle
-
 # Walkthrough: Working with Remotes
+
+A Git *remote* is a URL for another git database with which you can share code
+
+```bash
+git remote
+
+git fetch
+git push
+```
+
+???
+
+    create a repo at git hub
+    follow github commands to upload repo
+        remote
+        push
+
+    show at GitHub
+    modify on GitHub -add readme
+        fetch
+fetching changes from a remote.  This is your local view of the database at the remote side
+
+git URL for project
+    have people get it
+Cloaning project from git hub
+pushing your changes to a remote
+
+* A remote is a link to get to a git database that is somewhere else
+0.  Tell git how where to find the other database and give it a name
+
+1. fetch
+2. push
+
+---
+
+# Git Pull
+
+pull = fetch + merge
+
+???
+
+pull = fetch + merge
+
+There is an implicit branch because these are distributed systems.  Therefore the solution is a merge
 
 ---
 
