Aditional resources and link to cheatsheet

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -55,6 +55,8 @@ name: agenda
 13. SSH Keys
 ssh keys
 
+14. Additional resources
+
 ---
 
 # Get Git
@@ -214,6 +216,9 @@ https://git-scm.com/book/en/v2
 
 ## Atlassian has very good tutorial
 https://www.atlassian.com/git/
+
+## Interactive Git Cheatsheet
+http://ndpsoftware.com/git-cheatsheet.html
 
 ---
 
