Finalize last set of slides

--- a/02_sharing/slides.html
+++ b/02_sharing/slides.html
@@ -39,22 +39,10 @@ name: agenda
 7. Create GitHub Account
 8. Walkthrough: Working with Remotes
 9. Git Pull
-
 10. Workflows
-    Centralized
-    GitHub/Integration manager *
-    Gradschool model
-
 11. GitHub Pull Requests
-
 12. Other ways to share repo
-    Thumb drive / mounted filesystem
-    another computer over ssh
-    git daemon
-
 13. SSH Keys
-ssh keys
-
 14. Additional resources
 
 ---
@@ -206,6 +194,43 @@ pull = fetch + merge
 pull = fetch + merge
 
 There is an implicit branch because these are distributed systems.  Therefore the solution is a merge
+
+---
+
+# Workflows
+
+* Centralized
+* GitHub/Integration manager
+* Peer-Peer/Gradschool model
+
+---
+
+class: center, middle
+
+# GitHub Pull Requests
+
+---
+
+# Workflows
+
+* Centralized
+* GitHub/Integration manager
+* Peer-Peer/Gradschool model
+
+---
+
+# Other ways to share repo
+
+* Thumb drive / mounted filesystem
+* another computer over ssh
+* git daemon
+* E-mail
+
+---
+
+class: center, middle
+
+# SSH Keys
 
 ---
 
