Note which slides to get rid of

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -35,14 +35,13 @@ name: agenda
 2. Before Gitting started (env setup)
 3. Major Concepts (Review)
 4. Push/Fetch (Review)
+5. Stashing work
 99. Additional resources
 
 ???
 
-# DELETE ME: --- Pablo Notes ---
+DELETE ME: --- Pablo Notes ---
 
-Review:
-Why was pull necessary
 
 git stash
 
@@ -150,6 +149,23 @@ class: center, middle
 ---
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+----
+#DELETE FROM HERE
+---
 
 
 # Local Workflow (Review)
