Add extra credit

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -44,6 +44,7 @@ name: agenda
 11. Getting back to a know state
 12. Keeping track of where one came from
 13. Changing history
+14. (extra credit) undo rebase
 14. Additional resources
 
 ???
