Git stash slide

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -51,9 +51,6 @@ name: agenda
 
 DELETE ME: --- Pablo Notes ---
 
-
-git stash
-
 git add -p  # not file wise
 git add -i
 
@@ -157,9 +154,17 @@ class: center, middle
 
 ---
 
-git stash
+# Stashing work
 
+Useful to get a clean state without losing work
 
+```bash
+$ git stash
+$ git stash list
+$ git stash apply
+$ git stash drop
+$ git stash pop
+```
 
 ---
 
