--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -51,8 +51,6 @@ name: agenda
 
 DELETE ME: --- Pablo Notes ---
 
-git commit --amend
-
 Syntax for traversing graph
 
 git cherry-pick
@@ -175,6 +173,21 @@ $ git add -i    # more control for building up staging
 ```
 
 ---
+
+# Change last commit
+
+Opps... I should change that last commit
+
+```bash
+# git commit --amend
+```
+
+---
+
+
+
+
+
 
 # Additional resources
 
