Add Extra Credit Slide

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -44,7 +44,7 @@ name: agenda
 11. Getting back to a know state
 12. Keeping track of where one came from
 13. Changing history
-14. (extra credit) undo rebase
+14. Extra Credit
 14. Additional resources
 
 ???
@@ -193,6 +193,13 @@ $ git revert            # Give me the anti-commit, commit
 
 .center[![Git graph](git-graph.svg)]
 
+---
+
+class: center, middle
+
+# Extra Credit
+
+## How would you undo a 'git rebase'?
 ---
 
 # Additional resources
