Center graph using CSS class

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -195,11 +195,16 @@ $ git revert            # Give me the anti-commit, commit
 
 ---
 
-.center[![Git graph](git-graph.svg)]
+class: center
+
+![Git graph](git-graph.svg)
 
 ---
 
+#  XXXX TODO
 
+
+---
 
 
 class: center, middle
