Make git stash save as optional syntax

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -151,7 +151,7 @@ class: center, middle
 Useful to get a clean state without losing work
 
 ```bash
-$ git stash
+$ git stash [save]
 $ git stash list
 $ git stash apply
 $ git stash drop
