Fix agenda numbering

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -39,12 +39,11 @@ name: agenda
 6. Selectively 'add' content
 7. Simple Changes
 8. Git Algebra
-
-11. Getting back to a know state
-12. Keeping track of where one came from
-13. Changing history
-14. Extra Credit
-15. Additional resources
+9. Getting back to a know state
+10. Keeping track of where one came from
+11. Changing history
+12. Extra Credit
+13. Additional resources
 
 ???
 
@@ -201,8 +200,7 @@ class: center
 
 ---
 
-#  XXXX TODO
-
+# Getting back to a *known* state
 
 ---
 
