Add reset slides

--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -201,6 +201,18 @@ class: center
 ---
 
 # Getting back to a *known* state
+## Moving branch pointers
+
+```bash
+$ git reset
+```
+
+```bash
+$ git reset --soft
+$ git reset --mixed
+$ git reset --hard      # DANGER
+```
+
 
 ---
 
