--- a/03_out_of_trouble/slides.html
+++ b/03_out_of_trouble/slides.html
@@ -39,7 +39,7 @@ name: agenda
 6. Selectively 'add' content
 7. Simple Changes
 8. Git Algebra
-9. Getting back to a know state
+9. Getting back to a known state
 10. Keeping track of where one came from
 11. Changing history
 12. Extra Credit
